# campus-booking

./: .gitignore  .pre-commit-config.yaml  MakeFile  package-lock.json
backend/: .env.example  pyproject.toml
backend/app/: main.py  settings.py
backend/app/db/: alembic.ini
backend/app/db/alembic/: env.py
backend/app/logging/: context.py  logger.py  middleware.py
backend/scripts/: export_openapi.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: BookingModal.tsx  BookingSystem.tsx  LoginPage.tsx  RoomHighlight.tsx  ScheduleTable.tsx  SearchAndFilters.tsx
frontend/src/components/ui/: icons.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: parseQuery.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
