[project]
name = "campus-booking-backend"
version = "0.1.0"
description = "Campus Booking API"
authors = [
    {name = "NND",email = "nedelkonikita345@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
package-mode = false
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
configargparse = "^1.7"
prometheus-fastapi-instrumentator = "^7.0.0"
python-json-logger = "^2.0.7"
orjson = "^3.10.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E","F","I","UP","B","ASYNC","PL","RUF"]
ignore = ["E203","E501"]
exclude = ["alembic/versions/*"]

[tool.coverage.run]
source = ["app"]
omit = [
  "app/__init__.py",
  "app/migrations/*",
  "app/alembic/*",
  "app/tests/*",
]
branch = true

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
